Add apren.html to website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Test git</title>
 </head>
 <body>
-    
+    <h1>Git Course</h1>
+    <h2>Repositorios</h2>
+    <p>
+        Para clonar repos usar: <b>git clone https://___.git</b><br>
+    </p>
+    <h2>Branch-Ramas</h1>
+    <p>
+        Ver Ramas: <b>git branch</b><br>
+        Crear: <b>git branch nameBranch</b><br>
+        Cambiar: <b>git checkout nameBranch</b><br>
+        Crear y cambiar: <b>git checkout -b nameBranch</b><br>
+        Eliminar(con cuidado): <b>git branch -d nameBranch</b><br>
+        <em>No se pueden eliminar si estas en uno</em><br>
+        Eliminar(forzandolo-peligroso): <b>git branch -D nameBranch</b><br>
+    </p>
+
 </body>
 </html>
