why not send html file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
         <em>No se pueden eliminar si estas en uno</em><br>
         Eliminar(forzandolo-peligroso): <b>git branch -D nameBranch</b><br>
     </p>
+    <p>
+        About push command when you create a branch local because it's not exist in remote dev ecosystem, you can resolve this. Here is the help message: <br>
+        <dl>
+            
+            git push
+            <dt>
+                fatal: The current branch html has no upstream branch. <br>
+                To push the current branch and set the remote as upstream, use: 
+                    git push --set-upstream origin html <br>
+                To have this happen automatically for branches without a tracking
+                upstream, see 'push.autoSetupRemote' in 'git help config'.
+            </dt>
+        </dl>
 
+    </p>
 </body>
 </html>
