Creando style.css

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 fatal: The current branch html has no upstream branch. <br>
                 To push the current branch and set the remote as upstream, use: 
                     git push --set-upstream origin html <br>
+                    or: git push -u origin html(or whatever did you name your branch) <br>
                 To have this happen automatically for branches without a tracking
                 upstream, see 'push.autoSetupRemote' in 'git help config'.
             </dt>
