adding html at index file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         Eliminar(con cuidado): <b>git branch -d nameBranch</b><br>
         <em>No se pueden eliminar si estas en uno</em><br>
         Eliminar(forzandolo-peligroso): <b>git branch -D nameBranch</b><br>
+        Eliminar una rama que esta en el repo: <b>git push origin --delete nameBranch</b><br>
     </p>
     <p>
         About push command when you create a branch local because it's not exist in remote dev ecosystem, you can resolve this. Here is the help message: <br>
