second commit in the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Git Course</h1>
@@ -38,5 +39,9 @@
         </dl>
 
     </p>
+    <footer>
+        Derechos reservados a no se que cosa
+    </footer>
+    <script src="index.js"></script>
 </body>
 </html>
