--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test git</title>
+    <title>Test gittt</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <p>
         Para clonar repos usar: <b>git clone https://___.git</b><br>
     </p>
-    <h2>Branch-Ramas</h1>
+    <h2>Esto es Branch - Ramas</h1>
     <p>
         Ver Ramas: <b>git branch</b><br>
         Crear: <b>git branch nameBranch</b><br>
@@ -42,6 +42,5 @@
     <footer>
         Derechos reservados a no se que cosa
     </footer>
-    <script src="index.js"></script>
 </body>
 </html>
