--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         About push command when you create a branch local because it's not exist in remote dev ecosystem, you can resolve this. Here is the help message: <br>
         <dl>
             
-            git push
+            El GIT PUSHHHHHHHHH
             <dt>
                 fatal: The current branch html has no upstream branch. <br>
                 To push the current branch and set the remote as upstream, use: 
