--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
         </dl>
 
     </p>
+    <h2>Yo te salvaria señor, pero se me puso como buque</h2>
+    <p>Soy bien chistoso</p>
+    <ul>
+        <li>
+            ekjtashbgt
+        </li>
+    </ul>
     <footer>
         Derechos reservados a no se que cosa
     </footer>
+    <p>pero madre mia willy que carajo hiciste</p>
 </body>
 </html>
