Agregando estaciones con algo extra

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <em>No se pueden eliminar si estas en uno</em><br>
         Eliminar(forzandolo-peligroso): <b>git branch -D nameBranch</b><br>
         Eliminar una rama que esta en el repo: <b>git push origin --delete nameBranch</b><br>
+        Agregar modificaciones al ultimo commit: <br>
+        <b>Sin editar el mensaje[tras esto usar git add para pasarlo a staged, bueno segun yo es antes para poder tener algo con que trabajar, pero bueno, tras eso solo un ]: </b>git commit --amend --no-edit <br>
+        <b>Modificando el mensaje: </b>git commit --amend -m 'nuevo mensaje  del ultimo commit' <br>
+        <b>Eliminar el ultimo commit: </b> git reset --hard HEAD <br>
+        Ver commits con: <b>git log</b><br>
+        Ver commits en una linea: <b>git log --oneline</b><br>
+        
     </p>
     <p>
         About push command when you create a branch local because it's not exist in remote dev ecosystem, you can resolve this. Here is the help message: <br>
@@ -39,15 +46,15 @@
         </dl>
 
     </p>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-    </ul>
+    <h2>Agregando estaciones del año</h2>
+    <ol>
+        <li>Primavera - 1</li>
+        <li>Verano - 2</li>
+        <li>Otoño - 3</li>
+        <li>Invierno - 4</li>
+    </ol>
     <footer>
-        Derechos reservados a no se que cosa
+        Derechos reservados a no se que cosa. Para usar el <b>~</b> se debe usar alt+126.
     </footer>
     <p>pero madre mia willy que carajo hiciste</p>
 </body>
