--- a/index.html
+++ b/index.html
@@ -132,6 +132,51 @@ En resumen, git reset --mixed es útil para deshacer commits en Git manteniendo 
             <h4>Git reset --hard id-commit</h4>
             <p>Desecha todo el historial y regresa al commmit especificado</p>
         </article>
+        <article>
+            <h3>Resetear el repositorio</h3>
+            <p>Para esto en cambio vamos a mover el archivo ./.git/config a una ruta, eliminamos la carpeta,claro se puede quedar el .md, posteriormente vamos a usar git init, git branch -M main(esto si queremos seguir usando main en lugar d master), git add, git commit, vamos a regresar el archivo a config a su ruta original y finalmente un git push --force origin main. Esto para que ignore los warning y se descargue bn. Poco usual pero se puede usar. No recomendable si no es algo muy personal</p>
+        </article>
+
+        <article>
+            <h3>Remotos</h3>
+            <p>Nos permite interactuar con repositorios externos</p>
+            <h4>Git remote</h4>
+            <p>Muestra informacion de los repositorios externos como el origen y url</p>
+            <h4>Git remote -v</h4>
+            <p>Mostrarlo con detalles</p>
+            <h4>Git remote add nombre-origen https://github.com/usuario/repositorio.git</h4>
+            <p>Agregar uno</p>
+            <h4>Git remote rename nombre-actual newName</h4>
+            <p>Renombrar repo</p>
+            <h4>Git remote remove name</h4>
+            <h4>Git checkout --track -b -ramaRemota origin/ramaRemota</h4>
+            <p>Descargar una rama remota a local diferente a la principal</p>
+        </article>
+
+        <article>
+            <h3>Etiquetas</h3>
+            <p>Nos da una forma de versionar el codigo o proyecto</p>
+            <h4>Listar etiquetas</h4>
+            <p>git tag</p>
+            <h4>Crear etiqueta </h4>
+            <p>git tag numeroVersion</p>
+            <h4>Eliminar etiqueta</h4>
+            <p>git tag -d numeroVersion</p>
+            <h4>Mostrar info de una etiqueta</h4>
+            <p>git show numeroVersion</p>
+            <h4>Sincronizando la etiqueta del repositorio local al remoto</h4>
+            <p>
+                git add . <br>
+                git tag 'v1.0.0' <br>
+                git push origin numeroVersion 
+            </p>
+            <h4>Generando una etiqueta anotada(con mensajes de commmit)</h4>
+            <p>
+                git add . <br>
+                git tag -a 'v1.0.0' -m 'Mensaje de la etiqueta' <br>
+                git push --tags 
+            </p>
+        </article>
     </div>
     <footer>
         Derechos reservados a no se que cosa. Para usar el <b>~</b> se debe usar alt+126.
